--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "url": "git://github.com/castle/dashboard-prototype.git"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.1",
+    "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.2.2",
+    "@11ty/eleventy-plugin-webc": "^0.9.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "tailwindcss": "^3.2.1"
-  },
-  "dependencies": {
-    "@glidejs/glide": "^3.6.0"
   }
 }
